2008-09-26  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter-box2d/clutter-box2d-actor.h:
	* clutter-box2d/clutter-box2d-collision.h:
	* clutter-box2d/clutter-box2d-contact.h:
	* clutter-box2d/clutter-box2d.h: Fix documentation comments.

	* doc/reference/clutter-box2d-sections.txt: Correct a typo that
	prevented the generation of the clutter-box2d-actor section.

	* examples/scene-about.c (collision_cb): Fix a warning due
	to missing parameters.

2008-09-25  Øyvind Kolås  <pippin@linux.intel.com>

	Updated Box2D from upstream svn.

	* box2d/: updated to upstream box2d (svn revision 175).
	* box2d/Makefile.am: recreated to match source.

2008-09-25  Øyvind Kolås  <pippin@linux.intel.com>

	Added support for callbacks for collisions, based on a patch from
	James Ketrenos <jketereno@linux.intel.com> for bug #1116.

	* clutter-box2d/Makefile.am:
	* clutter-box2d/clutter-box2d-actor.cpp:
	* clutter-box2d/clutter-box2d-collision.cpp:
	* clutter-box2d/clutter-box2d-collision.h:
	* clutter-box2d/clutter-box2d-contact.cpp:
	* clutter-box2d/clutter-box2d-contact.h:
	* clutter-box2d/clutter-box2d-marshal.list:
	* clutter-box2d/clutter-box2d.cpp:
	* clutter-box2d/clutter-box2d.h:

	* examples/scene-about.c: (collision_cb), (scene_about): print some
	debug output when collisions occur.

2008-09-16  Øyvind Kolås  <pippin@linux.intel.com>

	* clutter-box2d/clutter-box2d.cpp: fixed a typo in a property
	registration , also in patch for bug #1095 from Murray Cumming.

2008-08-16  Murray Cumming  <murrayc@murrayc.com>

	* clutter-box2d/clutter-box2d-joint.cpp:
	* clutter-box2d/clutter-box2d-joint.h: clutter_box2d_add_mouse_joint(): 
	Make the target vertex parameter const, as in the other functions.
	Closing bug #1095.

2008-09-09  Øyvind Kolås  <pippin@linux.intel.com>

	* clutter-box2d/clutter-box2d-actor.cpp: applied patch from
	James Ketrenos <jketreno@linux.intel.com> that fixes potential
	dereferencing of NULL pointer in clutter_box2d_actor_motion,
	closing bug #867.
