@@ -14,14 +14,13 @@
 #define SYNCLOG(argv...)    if (0) g_print (argv)
 
 #include "Box2D.h"
-#include <clutter/clutter-child-meta.h>
+#include <clutter/clutter.h>
 #include "clutter-box2d-actor.h"
 #include "clutter-box2d.h"
 #include "math.h"
 #include <stdlib.h>
 #include <stdarg.h>
 #include <string.h>
-#include <clutter/clutter.h>
 #include "clutter-box2d-marshal.h"
 
 /* defined in clutter-box2d-actor.h */
